[package]
name = "tk-cantal"
description = """
    A client for cantal monitoring service. This is not for submitting metrics
    to the cantal. This library is for accessing metrics that cantal tracks.
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["cantal", "metrics", "tokio", "monitoring"]
categories = ["asynchronous", "network-programming"]
homepage = "http://github.com/tailhook/tk-cantal"
documentation = "http://docs.rs/tk-cantal"
version = "0.2.1"
authors = ["paul@colomiets.name"]

[dependencies]
tokio-core = "0.1.6"
tokio-io = "0.1.1"
tk-http = { version="0.3.3", default-features=false }
futures = "0.1.11"
log = "0.3.7"
abstract-ns = "0.4.1"
tk-pool = "0.3.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
serde_millis = "0.1.1"
failure = "0.1.0"
failure_derive = "0.1.0"

[dev-dependencies]
env_logger = "0.4.2"
tk-easyloop = "0.1.1"
